apps/demo-app/overlays/staging1/deployment-patch.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: demo
spec:
  template:
    spec:
      containers:
      - name: demo
